2017-02-08  Eric Carlson  <eric.carlson@apple.com>

        Add WebRTC as an off-by-default experimental feature menu item.
        https://bugs.webkit.org/show_bug.cgi?id=167972
        <rdar://problem/30293429>

        Reviewed by Jon Lee.

        * Shared/WebPreferencesDefinitions.h:
        * UIProcess/WebPreferences.cpp:
        (WebKit::WebPreferences::setPeerConnectionAndMediaStreamEnabled): We need to enable/disable
        peer connection and media stream preferences at the same time, so special case them.
        (WebKit::WebPreferences::setEnabledForFeature):
        * UIProcess/WebPreferences.h:

2017-02-08  Chris Dumez  <cdumez@apple.com>

        Add support for enhanced privacy diagnostic logging
        https://bugs.webkit.org/show_bug.cgi?id=167948
        <rdar://problem/30385112>

        Reviewed by Antti Koivisto.

        Implement new DiagnosticLoggingClient::logDiagnosticMessageWithEnhancedPrivacy()
        virtual method on WebKit2 and expose it to the client via the WKPageDiagnosticLogging
        delegate.

        * UIProcess/API/APIDiagnosticLoggingClient.h:
        (API::DiagnosticLoggingClient::logDiagnosticMessageWithEnhancedPrivacy):
        * UIProcess/API/C/WKPageDiagnosticLoggingClient.h:
        * UIProcess/API/Cocoa/_WKDiagnosticLoggingDelegate.h:
        * UIProcess/Cocoa/DiagnosticLoggingClient.h:
        * UIProcess/Cocoa/DiagnosticLoggingClient.mm:
        (WebKit::DiagnosticLoggingClient::setDelegate):
        (WebKit::DiagnosticLoggingClient::logDiagnosticMessageWithEnhancedPrivacy):
        * UIProcess/WebPageDiagnosticLoggingClient.cpp:
        (WebKit::WebPageDiagnosticLoggingClient::logDiagnosticMessageWithEnhancedPrivacy):
        * UIProcess/WebPageDiagnosticLoggingClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::logDiagnosticMessageWithEnhancedPrivacy):
        * UIProcess/WebPageProxy.h:
        * UIProcess/WebPageProxy.messages.in: