@@ -52,10 +52,12 @@ Entry::Entry(const Key& key, const WebCore::ResourceResponse& response, const We
     , m_timeStamp(std::chrono::system_clock::now())
     , m_response(response)
     , m_varyingRequestHeaders(varyingRequestHeaders)
-    , m_redirectRequest(redirectRequest)
 {
     ASSERT(m_key.type() == "Resource");
     // Redirect body is not needed even if exists.
+
+    m_redirectRequest = std::make_unique<WebCore::ResourceRequest>();
+    m_redirectRequest->setAsIsolatedCopy(redirectRequest);
     m_redirectRequest->setHTTPBody(nullptr);
 }
 
@@ -64,7 +66,6 @@ Entry::Entry(const Entry& other)
     , m_timeStamp(other.m_timeStamp)
     , m_response(other.m_response)
     , m_varyingRequestHeaders(other.m_varyingRequestHeaders)
-    , m_redirectRequest(other.m_redirectRequest)
     , m_buffer(other.m_buffer)
     , m_sourceStorageRecord(other.m_sourceStorageRecord)
 {
@@ -128,7 +129,7 @@ std::unique_ptr<Entry> Entry::decodeStorageRecord(const Storage::Record& storage
         return nullptr;
 
     if (isRedirect) {
-        entry->m_redirectRequest.emplace();
+        entry->m_redirectRequest = std::make_unique<WebCore::ResourceRequest>();
         if (!entry->m_redirectRequest->decodeWithoutPlatformData(decoder))
             return nullptr;
     }
