@@ -345,9 +345,7 @@ bool SpeculativeLoadManager::canRetrieve(const Key& storageKey, const WebCore::R
 void SpeculativeLoadManager::retrieve(const Key& storageKey, RetrieveCompletionHandler&& completionHandler)
 {
     if (auto preloadedEntry = m_preloadedEntries.take(storageKey)) {
-        RunLoop::main().dispatch([completionHandler = WTFMove(completionHandler), cacheEntry = preloadedEntry->takeCacheEntry()] () mutable {
-            completionHandler(WTFMove(cacheEntry));
-        });
+        completionHandler(preloadedEntry->takeCacheEntry());
         return;
     }
     ASSERT(m_pendingPreloads.contains(storageKey));
